<resources>
    <string name="app_name">nexme</string>
    <string name="title_activity_maps">Map</string>
    <string name="skip">Skip</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_with_phone_mobile">Sign up with Phone/Mobile</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="create_your_account">Create your account</string>
    <string name="loading">Loading...</string>
    <string name="email_address">Email address</string>
    <string name="mr_hourse_nexme_com">mr.hourse@nexme.com</string>
    <string name="password">Password</string>
    <string name="password_hint">**********</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="need_an_account">Need an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="next">Next</string>
    <string name="nexme_phone_number">(800) 390-8801</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_the_4_digit_code_sent_to">Enter the 4 digit code sent to</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="what_is_your_email_address">What is your email address?</string>
    <string name="info_nexmeapp_com">info@nexmeapp.com</string>
    <string name="create_your_account_password">Create your account password</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="wrong_username_password">Wrong username/password</string>
    <string name="invalid_password">Invalid password</string>
    <string name="email_already_in_use">Email already in use</string>
    <string name="description_tour1">Tour homes with a full-service agent, available in real-time. Make an offer right
        through the app, represented by a full-service agent.
    </string>
    <string name="instant_service">Instant service</string>
    <string name="no_commitment">No commitment</string>
    <string name="description_tour2">No contracts or commitment until you\'re ready to buy or sell a home. Even better, 50% commission refund back to you!</string>
    <string name="description_tour3">Enable location and allow NEXME to provide the most accurate data.</string>
    <string name="desctiption_tour4">Turn on notifications to find out about new homes as they hit the market.</string>
    <string name="location">Location</string>
    <string name="notifications">Notifications</string>
    <string name="location_required">Location required</string>
    <string name="resend_code_in">Resend code in %s</string>
</resources>
