<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:background="@color/colorPrimary"
                                                   android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnBack"
            style="@style/Back_Button_Style"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin_medium" android:layout_marginStart="@dimen/margin_medium"/>
    <TextView
            android:text="@string/create_your_account_password"
            style="@style/Text_Style"
            android:textSize="@dimen/text_size_large"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium" android:layout_marginTop="120dp"/>


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin_medium" android:layout_marginStart="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_medium" android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/signup_margin_top" android:id="@+id/linearLayout4">

        <EditText android:layout_width="0dp" style="@style/EditText_Style"
                  android:layout_weight="1"
                  android:id="@+id/edtPassword"
                  android:hint="@string/password_hint"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
            android:layout_width="150dp"
            style="@style/SignUp_Phone_Button_Style"
            android:text="@string/next"
            android:id="@+id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.94" android:layout_marginTop="@dimen/signup_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"/>

</androidx.constraintlayout.widget.ConstraintLayout>